  images is recommended.

- Removed "interp1d" (1d-D interpolation) option from MEI (Mathematical
  Expresion Interpreter) syntax, as it was poorly documented and
  added complexity; a more general interpolation framework, usable also
  from user functions, is planned for the future.

- Add option for postprocessing output of linear solver residuals.

Architectural changes
---------------------

- Default to PyQt5 instead of PyQt4 when both are available.

- Remove support for restart files older than version 4.0.

Bug fixes
---------

- Lagrangian module: fix characteristic time using temperature.

- Fix for issue #236 (crash on restart using periodicity).

- Fix for idilat>3 algo. and isstpp>1 (beta or NVD/TVD limiters) compatibility.

Release 5.0.0 (June 2 2017)
===========================

User changes
------------

- Allow user definitions of head losses by zones (see cs_user_head_losses.c).

- Do not relax k and epsilon by default when using Bl v2 k turbulence model.

- When inserting boundaries (shuch as thin walls), vertices are now separated
  on each side of those boundaries, for a true topological mesh modification.
  cs_user_mesh_thinwall is also renamed to cs_user_mesh_boundary.

Numerics
--------

- Improve time stepping of the coupled solver for the components of Reynolds
  stress tensor (irijco = 1).
  * No clipping on Rij should appear when no flux rectonstruction is needed and
    an upwind scheme is used (except those due to boundary conditions on R12).
  * Add eigen_max function to cs_math.c
  * EBRSM and SSG models are treated.
  * Add a clipping indicator which can be activated to check where clipping
    occurs in the output files

- Add and reorganize convection schemes (especially for VOF method)
  * reorganize Roe-Sweby limiters.
  * add Compressive convection schemes for accurate modeling of free surface
    with VOF method.

- Add a conservative gradient reconstructed with least squares gradient for