@@ -51,6 +51,8 @@ User changes
 Architectural changes
 ---------------------
 
+- Improve Catalyst environment handling for better automation with SALOME.
+
 - Default to PyQt5 instead of PyQt4 when both are available.
 
 - Remove support for restart files older than version 4.0.
